start working on a second game "mindMaze"

--- a/client/src/html/mindMaze.html
+++ b/client/src/html/mindMaze.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Index</title>
+		<title>mindMaze</title>
 
 		<meta charset="utf-8">
 		<meta http-equiv="cleartype" content="on">
@@ -26,11 +26,14 @@
 
 		<meta name="theme-color" content="#164F40">
 
-		<script src="/js/index.js"></script>
-		<link rel="stylesheet" href="/css/index.css">
+		<script src="/js/mindMaze.js"></script>
+		<link rel="stylesheet" href="/css/mindMaze.css">
   </head>
   <body>
-		<button>tweak</button>
-		<button>mindMaze</button>
+		<div id="status">Loading.</div>
+
+		<div id="grid"></div>
+
+		<button id="ready">READY</button>
 	</body>
 </html>
