game loby now working

--- a/client/src/html/index.html
+++ b/client/src/html/index.html
@@ -30,7 +30,8 @@
 		<link rel="stylesheet" href="/css/index.css">
   </head>
   <body>
-		<button>tweak</button>
-		<button>mindMaze</button>
+		<div id="status">Loading.</div>
+
+		<ul id="games"></ul>
 	</body>
 </html>
